EPMRPP-118746 || Update lifecycle of reporting queues